# ray_tracing_base

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/embree-3.13.2.x86_64.linux/lib/cmake/embree-3.13.2/: embree-config.cmake
ext/embree-3.13.2.x86_64.macosx/lib/cmake/embree-3.13.2/: embree-config.cmake
ext/stb/: CMakeLists.txt  stb_image.h
ext/tinyobjloader/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Camera/: CMakeLists.txt  camera.cpp  camera.hpp
lib/DataStracture/: Accelerator.cpp  Accelerator.hpp  CMakeLists.txt
lib/Math/: CMakeLists.txt  Vec.cpp  Vec.hpp
lib/RNG/: random.cpp  random.hpp
projects/: CMakeLists.txt
projects/EmbreeBDPT/: CMakeLists.txt  bdpt.cpp  bdpt.hpp  main.cpp  raytrace.hpp  sampling.hpp
projects/PurePathTracing/: CMakeLists.txt  api.hpp  bsdf.hpp  main.cpp  material.hpp  raytrace.hpp  sampling.hpp  scene.hpp
projects/PurePathTracingEmbree/: CMakeLists.txt  bsdf.hpp  main.cpp  material.hpp  raytrace.hpp  sampling.hpp  scene.hpp
src/: CMakeLists.txt
src/Embree/: CMakeLists.txt  wrap_embree.cpp  wrap_embree.hpp
src/Light/: CMakeLists.txt  IBL.cpp  IBL.hpp
src/Material/: Material.hpp
src/Parallel/: CMakeLists.txt  concurrent.cpp  concurrent.hpp
src/Texture/: CMakeLists.txt  texture.cpp  texture.hpp
